examples/compiler_errors/primop_clock_now_missing_time.flx
// skip: support or non-error companion fixture for compiler diagnostics

fn main() -> Unit {
    let ignored = clock_now()
}
